--- a/EnglishWebSimulatorApp/Views/Lesson/Lesson.cshtml
+++ b/EnglishWebSimulatorApp/Views/Lesson/Lesson.cshtml
@@ -129,7 +129,7 @@
                 
                 @if (Model[index].Pict != null)
                 {
-                    <img src="@Model[index].Pict" class="img-fluid imgFront" hidden />
+                    <img src="@Model[index].Pict" class="imgFront imgPic" hidden />
                 }
 
                 <img src="/english.jpg" class="img-fluid imgBack" />
