--- a/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
+++ b/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
 </head>
 
 <body>
@@ -120,11 +119,19 @@
 
                                 </li>
 
-                                <li class="nav-item">
+                            <li class="nav-item mr-1">
+                                <div class="dropdown">
+                                    <button class="btn btn-outline-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        @Localizer["Show words"]
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item" asp-controller="Home" asp-action="ShowWords">@Localizer["ShowWords"]</a>
+                                        <a class="dropdown-item" asp-controller="Home" asp-action="ShowCardsWords">@Localizer["Show cards words"]</a>
+       
+                                    </div>
+                                </div>
+                            </li>
 
-                                    <a class="btn btn-outline-dark m-1" asp-area="" asp-controller="Home" asp-action="ShowWords">@Localizer["ShowWords"]</a>
-
-                                </li>
 
                                 <li class="nav-item mr-1">
                                     <div class="dropdown">
@@ -138,6 +145,7 @@
                                         </div>
                                     </div>
                                 </li>
+
                                 <li class="nav-item mr-1">
                                     <div class="dropdown">
                                         <button class="btn btn-outline-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -175,10 +183,13 @@
 
         </header>
 
-        <div class="container">
-            <main role="main">
-                @RenderBody()
-            </main>
+        <div class="container-fluid background_main">
+            <div class="container pb-3 pt-1">
+                <main role="main">
+                    @RenderBody()
+                </main>
+            </div>
+           
         </div>
 
     
