Для ускорения сайта я сделал связь с базой через хранимые процедуры, ну и ещё хранение картинок не в байтах а стринговой строкой название картинки, а картинки хранятся в отдельной папке на сервере, скорость заметно улучшилось.

--- a/EnglishWebSimulatorApp/Views/Home/AboutApp.cshtml
+++ b/EnglishWebSimulatorApp/Views/Home/AboutApp.cshtml
@@ -1,13 +1,11 @@
-﻿<></>
-
-<div class="style_log_reg">
+﻿<div class="style_log_reg">
     <div class="text-center">
         <div class="title textFont3">
             <h2>@Localizer["Title1"]</h2>
         </div>
         <div>
             <div class="text-img">
-                <img class="img" src="http://newtvnews.ru/wp-content/uploads/2022/09/10-1-2.jpg" alt="not img" />
+                <img class="img" src="/EnglishFont.jpg" alt="not img" />
                 <div class="text">
                     <p>
                         @Localizer["Title2"]
