--- a/EnglishWebSimulatorApp/Views/Home/AddWords.cshtml
+++ b/EnglishWebSimulatorApp/Views/Home/AddWords.cshtml
@@ -3,7 +3,6 @@
 @{
     var WId = 0;
     WId = Model == null ? 0 : Model.Id;
-    string pict = "";
 }
 
 <div class="container" style="background-color:antiquewhite;">
@@ -15,13 +14,13 @@
     {
         <div class="m-2" style="text-align:center"><h1>@Localizer["Update"] - @Model.WordEng</h1></div>
         <div class="container col-3 m-2" style="border:1px solid black;">
+            
             @if (Model.Pict != null)
             {
-                string imageBase64Data = Convert.ToBase64String(Model.Pict);
-                string imageDataURL = string.Format("data:image/png;base64,{0}", imageBase64Data);
-                pict = imageDataURL;
-                <img class="card-img-top img-fluid m-2" src="@pict" >
+                <img class="card-img-top img-fluid m-2" src="~/img/words/@Model.Pict">
             }
+            
+            
             @if (Model.SoundFilePath != null)
             {
                 <audio class="testAudio" hidden src="~/sounds/@Model.SoundFilePath" type="audio/mpeg">
