--- a/EnglishWebSimulatorApp/Views/Home/ShowCardsWords.cshtml
+++ b/EnglishWebSimulatorApp/Views/Home/ShowCardsWords.cshtml
@@ -1,1 +1,58 @@
-﻿eamdvnej
+﻿@model LibraryEnShow;
+
+<div class="background_card_word">
+        <div class="card">
+        @if (Model.Pict != null)
+        {
+            <img src="~/img/words/@Model.Pict" class="card__image" alt="" />
+        }
+        else
+        {
+            <img src="~/english.jpg" class="card__image" alt="" />
+        }
+
+            <div class="card__overlay">
+                <div class="card__header">
+                @if (Model.Pict != null)
+                {
+                     <img class="card__thumb" src="~/img/words/@Model.Pict" alt="" />
+                }
+                else
+                {
+                    <img src="~/english.jpg" class="card__image" alt="" />
+                }
+                    <div class="card__header-text">
+                        <div class="d-flex justify-content-between">
+                        <h3 class="card__status">@Model.Id</h3>
+                        @if (Model.Sound!=null)
+                        {
+                            <audio class="testAudio" hidden src="~/sounds/@Model.Sound" type="audio/mpeg">
+                            </audio>
+                            <i class="bi bi-play-btn playAudio" style="font-size:30px; text-align:center;"></i>
+                        }
+                    </div>
+                    
+                        <h3 class="card__title">@Model.WordEng</h3>
+                        <h3 class="card__title">@Model.WordRus</h3>                 
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mb-1">
+                <a asp-controller="Home" asp-action="ShowCardsWords" asp-route-id="@Model.Id" asp-route-flag="True" class="btn btn-outline-info mr-3">Next</a>
+                    
+                <form method="get" asp-action="ShowCardsWords" asp-controller="Home">
+                    <div class="d-flex mr-2">
+                        <input type="number" min="1" name="id" step="1" value="1" size="15" style="width:50px;" />
+                        <button class="btn btn-outline-info ml-1" name="id" type="submit">✓</button>
+                    </div>                  
+                </form>    
+                </div>        
+            </div>
+        </div>
+</div>
+
+<script>
+    "strict"
+    document.querySelector(".playAudio").addEventListener("click", ()=>{
+        document.querySelector(".testAudio").play();
+    });
+</script>
