--- a/EnglishWebSimulatorApp/Views/Lesson/YourAccount.cshtml
+++ b/EnglishWebSimulatorApp/Views/Lesson/YourAccount.cshtml
@@ -16,7 +16,7 @@
     <div class="card" style="min-width:300px; min-height:500px;">
 
         <div class="upper">       
-                <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid">
+                <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid" style="width:100%;">
         </div>
 
         <div class="user text-center mb-4">
