--- a/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
+++ b/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
@@ -125,8 +125,9 @@
                                         @Localizer["Show words"]
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" asp-controller="Home" asp-action="ShowWords">@Localizer["ShowWords"]</a>
+                                        <a class="dropdown-item" asp-controller="Home" asp-action="ShowWords">@Localizer["ShowWords"] @User.Identity.Name.ToString()!</a>
                                         <a class="dropdown-item" asp-controller="Home" asp-action="ShowCardsWords">@Localizer["Show cards words"]</a>
+                                        <a class="dropdown-item" asp-controller="Home" asp-action="ShowAllWords">@Localizer["Show all user words"].</a>
        
                                     </div>
                                 </div>
