--- a/EnglishWebSimulatorApp/wwwroot/css/site.css
+++ b/EnglishWebSimulatorApp/wwwroot/css/site.css
@@ -19,6 +19,32 @@ for details on configuring this project to bundle and minify static web assets. 
     background: url(https://top-fon.com/uploads/posts/2023-01/1674929011_top-fon-com-p-foni-dlya-prezentatsii-na-angliiskuyu-tema-116.jpg) repeat;
 }
 
+.background_card_word {
+    background: url(https://catherineasquithgallery.com/uploads/posts/2023-01/1674273317_catherineasquithgallery-com-p-fon-serii-vintazhnii-foto-171.jpg) no-repeat;
+    height: 90vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.background_All_word {
+    background: url(../img/background/vecteezy_foggy-landscape-forest-in-the-morning-beautiful-sunrise-mist_5572340_85.jpg) no-repeat;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+}
+
+.elem-center {
+    display:flex;
+    justify-content:center;
+}
+
+.text_center {
+    text-align:center
+}
+
 .style_log_reg {
     background-color:aliceblue;
     padding:30px;
@@ -272,6 +298,115 @@ body {
     .imgPic {
         width: 100%;
         height:auto;
-    }
-    
+    }   
 }
+
+:root {
+    --surface-color: #fff;
+    --curve: 40;
+}
+
+.card {
+    position: relative;
+    display: block;
+    width: 20em;
+    border-radius: calc(var(--curve) * 1px);
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.card-show-rezult {
+    position: relative;
+    display: block;
+    border-radius: calc(var(--curve) * 1px);
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.card__image {
+    width: 100%;
+    height: 30em;
+}
+
+.card__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    border-radius: calc(var(--curve) * 1px);
+    background-color: var(--surface-color);
+    transform: translateY(100%);
+    transition: .2s ease-in-out;
+}
+
+.card:hover .card__overlay {
+    transform: translateY(0);
+}
+
+.card__header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    padding: 0.5em;
+    border-radius: calc(var(--curve) * 1px) 0 0 0;
+    background-color: var(--surface-color);
+    transform: translateY(-100%);
+    transition: .2s ease-in-out;
+}
+
+.card__arc {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1;
+}
+
+    .card__arc path {
+        fill: var(--surface-color);
+        d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+    }
+
+.card:hover .card__header {
+    transform: translateY(0);
+}
+
+.card__thumb {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.card__title {
+    font-size: 1em;
+    margin: 0 0 .3em;
+    color: #6A515E;
+}
+
+.card__tagline {
+    display: block;
+    margin: 1em 0;
+    font-family: "MockFlowFont";
+    font-size: .8em;
+    color: #D7BDCA;
+}
+
+.card__status {
+    font-size: .8em;
+    color: #D7BDCA;
+}
+
+.card__description {
+    padding: 0 2em 2em;
+    margin: 0;
+    color: #D7BDCA;
+    font-family: "MockFlowFont";
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}    
